--- a/functions/Makefile.am
+++ b/functions/Makefile.am
@@ -9,10 +9,10 @@ AM_LDFLAGS =					\
 LIBS =						\
 	$(GROONGA_LIBS)				
 
-function_plugins_LTLIBRARIES = 
-function_plugins_LTLIBRARIES += snippet_tritonn.la
+functions_plugins_LTLIBRARIES = 
+functions_plugins_LTLIBRARIES += snippet_tritonn.la
 
-function_plugins_SOURCE =			\
+functions_plugins_SOURCE =			\
 	snippet_tritonn.c
 
 include snippet_tritonn.am
